# wisard

./: Cargo.toml  LICENSE-MIT  README.md
src/: dataset.rs  lib.rs  sample.rs  util.rs  utils.rs
src/encode/: mod.rs  permute.rs  shuffle.rs  slice.rs  therm.rs
src/filter/: bloom.rs  lut.rs  mod.rs
src/model/: disc.rs  mod.rs  wisard.rs
