[package]
name = "wisard"
version = "0.0.3"
authors = ["Leonardo Neumann <leonardo@neumann.dev.br>"]
description = "WiSARD nets implementation in Rust"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/leonardohn/wisard"
documentation = "https://docs.rs/wisard"
readme = "README.md"
categories = ["science"]
keywords = [
    "data-science",
    "machine-learning",
    "neural-networks",
    "weightless",
]

[dependencies]
bloom = "0.3.2"
num-traits = "0.2.15"
rand = "0.8.5"
rand_xoshiro = "0.6.0"

[dependencies.bitvec]
version = "1.0.1"
features = ["serde"]

[dependencies.serde]
version = "1.0.162"
features = ["derive"]

[profile.release]
lto = true

[profile.bench]
debug = true
